# internal/infrastructure/router/account_router.go
@@ -3,7 +3,6 @@ package router
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/viniggjpormade/pormade-email-manager/internal/adapter/delivery/http/handlers"
-	"github.com/viniggjpormade/pormade-email-manager/internal/adapter/delivery/http/middlewares"
 	"github.com/viniggjpormade/pormade-email-manager/internal/adapter/repository/postgres"
 	"github.com/viniggjpormade/pormade-email-manager/internal/usecase/account"
 	"gorm.io/gorm"
@@ -11,17 +10,17 @@ import (
 
 func SetupAccountRoutes(r *gin.Engine, db *gorm.DB) {
 	accountRepository := postgres.NewAccountRepository(db)
-	validateTokenUseCase := account.NewValidateTokenUseCase(accountRepository)
+	// validateTokenUseCase := account.NewValidateTokenUseCase(accountRepository)
 
 	createUseCase := account.NewCreateUseCase(accountRepository)
 
 	handler := handlers.NewAccountHandler(createUseCase)
 
-	authMiddleware := middlewares.EnsureAuth(validateTokenUseCase)
+	// authMiddleware := middlewares.EnsureAuth(validateTokenUseCase)
 
 	api := r.Group("/accounts")
 	{
-		api.POST("", authMiddleware, handler.Create)
+		api.POST("", handler.Create)
 
 	}
 }
